<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.browser.BrowserApiFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/api_random_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/api_cards"
            tools:ignore="ButtonStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/api_cards_by_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_cardsByName"
                tools:ignore="ButtonStyle" />

            <EditText
                android:id="@+id/api_card_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/api_cardName"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/api_cards_by_set_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_cardsBySet"
                tools:ignore="ButtonStyle" />

            <EditText
                android:id="@+id/api_set_id_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/api_setId"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/web_api_list_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:paddingBottom="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
