...
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="go_back_to_home_page">Go back to home page</string>
    <string name="txt_error_msg">Error: %s</string>

    <!--    web api texts-->
    <string name="api_random_card">Random Card</string>
    <string name="api_cardsBySet">Cards By Set</string>
    <string name="api_cardsByName">Cards By Name</string>
    <string name="api_cardName">Card Name</string>
    <string name="api_cardById">Cards By Id</string>
    <string name="api_cardId">Card Id</string>
    <string name="api_setId">Set Id</string>
...
